8229486: Replace wildcard address with loopback or local host in tests - part 21
Reviewed-by: chegar